# perp-data-moin

./: Cargo.toml  config.toml
docs/: requirements.md
docs/superpowers/plans/: 2026-04-23-monitor-ui-redesign.md
docs/superpowers/specs/: 2026-04-23-monitor-ui-redesign-design.md
src/: app.rs  config.rs  error.rs  main.rs
src/domain/: exchange.rs  history.rs  instrument.rs  market.rs  metrics.rs  mod.rs  pair.rs  quote.rs
src/exchange/: adapter.rs  aster.rs  binance.rs  bitget.rs  bybit.rs  event.rs  gate.rs  huobi.rs  kucoin.rs  mod.rs  okx.rs  registry.rs  watchdog.rs
src/service/: aggregator.rs  aligner.rs  discovery.rs  mod.rs  pair_builder.rs
src/store/: history_store.rs  mod.rs  snapshot_store.rs  view_store.rs
src/web/: dto.rs  index.html  mod.rs  routes.rs  server.rs
